<resources>
    <string name="app_name">Tinli</string>
    <string name="start_session">INICIAR SESSÃO</string>
    <string name="register_bt_text">CRIAR CONTA</string>
    <string name="app_name_ltda">® Tinli.ltda</string>
    <string name="slogan">Encontre seu próximo \n livro favorito</string>
    <string name="email">Email</string>
    <string name="password">Senha</string>
    <string name="login">LOGIN</string>
    <string name="welcome">Bem vindo de volta!</string>
    <string name="cannot_log_in">Não consegue fazer login?</string>
    <string name="create_new_account">CRIAR NOVA CONTA</string>
    <string name="register_sub_message">Primeiro, precisamos te conhecer.</string>
    <string name="register_welcome_message">Olá leitor, vamos começar!</string>
    <string name="cellphone_input">Celular com DDD</string>
    <string name="cpf_input">CPF</string>
    <string name="email_input">Seu melhor email</string>
    <string name="name_input">Nome completo</string>
    <string name="user_input">Usuário</string>
    <string name="login_data_title_text">Defina seus dados de login</string>
    <string name="login_data_password_advices">Evite sequências numéricas, datas de \n aniversário ou número de documentos</string>
    <string name="password_input">Senha</string>
    <string name="confirm_password_input">Confirmar senha</string>
    <string name="default_book_title">BOOK TITLE</string>
    <string name="default_author">Author</string>
    <string name="default_category">Category</string>
    <string name="post_title">POSTAGENS</string>
    <string name="post_button_text">Trocar</string>
    <string name="cancel_transfer_text">Cancelar</string>
    <string name="finish">Finalizar</string>
    <string name="transfer_date_text">DATA</string>
    <string name="transfer_local_text">LOCAL</string>
    <string name="transfer_default_book_name">Book Name</string>
    <string name="default_date">05/05/05</string>
    <string name="default_local">Shopping Rio Poty</string>
    <string name="pop_text">Quero trocar</string>
    <string name="popup_button_text">Propor</string>
    <string name="post_book">post book</string>
    <string name="for_popup">Por</string>
    <string-array name="user_books">
        <item>A arte da guerra</item>
        <item>A mão e a luva</item>
        <item>Noites brancas</item>
    </string-array>
    
</resources>