<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background_color"
    tools:context=".App.Controllers.Login">

    <ImageView
        android:id="@+id/back_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:scaleX="1.2"
        android:scaleY="1.2"
        android:src="@drawable/back_bt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rockwell_bold"
        android:text="@string/login"
        android:textColor="@color/app_yellow_color"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:layout_marginBottom="40dp"
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/proxima_nova"
        android:text="@string/welcome"
        android:textColor="#929189"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/email_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/email_input"
        android:layout_marginBottom="20dp"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/email_input_icon"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/app_gray_color"
        android:textColorHint="@color/app_input_unfocused_color"
        app:layout_constraintBottom_toTopOf="@+id/password_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/password_input"
        android:layout_marginBottom="20dp"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/password_icon"
        android:drawablePadding="10dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/app_gray_color"
        android:textColorHint="@color/app_input_unfocused_color"
        app:layout_constraintBottom_toTopOf="@+id/login_bt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="Autofill" />

    <ImageView
        android:layout_marginBottom="20dp"
        android:id="@+id/login_bt"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/login_bt"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:layout_marginBottom="20dp"
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/proxima_nova_medium"
        android:text="@string/cannot_log_in"
        android:textColor="@color/app_gray_color"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/createNewAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/createNewAccount"
        android:textColor="#7cdcdc"
        android:textSize="18sp"
        android:fontFamily="@font/proxima_nova_medium"
        android:layout_marginBottom="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_new_account"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:alpha="0.4"
        android:text="@string/app_name_ltda"
        android:textColor="#DFDFDF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>